--- a/src/sass/theme/blocks/_cb-cta.scss
+++ b/src/sass/theme/blocks/_cb-cta.scss
@@ -28,7 +28,6 @@
 	}
 
 	&__content {
-		max-width: 720px;
 		margin: 0 auto;
 
 		p:last-child {
